# msk_musik

./: .gitignore  Cargo.toml  Makefile  README.md  test_simplified_api.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  security.yml
musik_std/: Cargo.toml  README.md
musik_std/examples/: chord_formula_bits_demo.rs  chord_formula_demo.rs  degree_accident_demo.rs  degree_alteration_demo.rs  degree_alteration_from_demo.rs  degree_demo.rs  demo_simplified_api.rs  extended_harmony_demo.rs  formula_degree_demo.rs  functional_demo.rs  note_arithmetic.rs  note_display_demo.rs  note_octave_shifts.rs  note_octave_verification.rs  pitch_class_demo.rs  scale_demo.rs  scale_formula_demo.rs  semitone_pitch_class_demo.rs  shl_demo.rs  shr_demo.rs  shr_shl_combined.rs
musik_std/src/: audio.rs  chord_formula.rs  degree_accident.rs  degree_alteration.rs  formula_degree.rs  lib.rs  midi.rs  note.rs  octave.rs  pitch_class.rs  prelude.rs  scale_formula.rs  semitone.rs  theory.rs
musik_theory/: Cargo.toml
musik_theory/examples/: chord_demo.rs  degree_demo.rs  scale_demo.rs
musik_theory/src/: audio.rs  lib.rs  theory.rs
scripts/: setup-hooks.sh
