[workspace]
resolver = "2"

members = [
    "musik_theory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["veminovici <veminovici@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/veminovici/msk_musik"
description = "A music processing library workspace"

[workspace.dependencies]
# Common dependencies can be defined here and shared across workspace members