[package]
name = "musik_std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standard music library with common utilities and algorithms"

[dependencies]
# Add dependencies as needed

[dev-dependencies]
# Development dependencies for testing

[[example]]
name = "formula_degree_demo"