[package]
name = "musik_theory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core music theory and processing library"

[dependencies]
# Add dependencies as needed

[dev-dependencies]
# Development dependencies for testing

[[example]]
name = "scale_demo"

[[example]]
name = "degree_demo"

[[example]]
name = "chord_demo"